 * Added user to project multi-select listbox in manage section.
 * Added list of projects  a user is assigned to to the account page.
 * Added print bug view.
 * Added jump to bug form.
 * Added core_proj_user_API.php.
 * Added make_lf_crlf() to remove bare line feeds.
 * Added g_strip_bare_lf to toggle use of make_lf_crlf().
 * Added priority reporting on the report form for developers.
 * Removed access_min and access threshold concepts from the user and project management.
 * Removed extra "echo" in news archive page.
 * Removed proj_user_delete_page.php.
 * Removed dependency on s_ enum strings.  Use g_ enum strings instead.
 * Updated Copyright to 2002.
 * Added $g_use_javascript to default/config_inc1.php (SC)

03.15.2002  -   0.17.1

 * Fixed missing closing span tag in view_bug_*page.php.
 * Fixed advanced summaries (jpgraph) for general statistics for all projects.
 * Fixed small problem in all localization files (for $s_reset_request_msg).
 * Fixed summary stats for developers when they are assigned with "developer" rights at a project and do not have default profile >="developer".
 * Fixed reporter poplist filter in buglist when users are assigned >="reporter" at a project and do not have default profile >="reporter".
 * Fixed summary page for "All projects" option
 * Fixed printable buglist for "All projects" option
 * Fixed document links (ChangeLog, README, etc.)
 * Fixed problem where portuguese_brazil localization did not appear correctly.
 * Fixed several minor CSS class consistency issues.
 * Fixed file download links to use rawurlencode().
 * Fixed admin_check.php to check for Windows style \.
 * Fixed file dates to display correctly.
 * Fixed bug update button to go to proper simple or advanced page.
 * Fixed a problem where users could not report bugs if uploading was disabled.
 * Fixed a minor problem in the print_reporters_option_list().
 * Fixed more CSS issues.
 * Fixed file uploads to not allow duplicate files when using DISK.