@@ -24,6 +24,7 @@
 	$s_print = "Print";
 	$s_jump = "Jump";
 	$s_copy_users = "Copy Users";
+	$s_copy_categories = "Copy Categories";
 
 	# ERROR strings
 	$MANTIS_ERROR[ERROR_GENERIC]            = "ERROR: An error occurred during this action.  You may wish to report this error to your local administrator.";
